--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -462,7 +462,7 @@ $zen-auto-include-item-base: false;
     float: right;
   }
   .form-type-textfield input {
-    width: 125px;
+    width: 45%;
   }
   #edit-submit {
     background: none repeat scroll 0 0 $dark-orange;
@@ -470,6 +470,7 @@ $zen-auto-include-item-base: false;
     color: $gray;
     float: left;
     padding: 3px;
+    width: 45%;
   }
 }
 .section-studio {
