--- a/css/styles.css
+++ b/css/styles.css
@@ -1421,6 +1421,9 @@ h1.header__site-name a:link, h1.header__site-name a:visited {
   /* line 461, ../sass/layouts/_responsive.scss */
   #block-campaignmonitor-454473ba9a4727caea867f18be3bb00b .form-item-email {
     float: right;
+  }
+  /* line 464, ../sass/layouts/_responsive.scss */
+  #block-campaignmonitor-454473ba9a4727caea867f18be3bb00b .form-type-textfield input {
     width: 45%;
   }
   /* line 467, ../sass/layouts/_responsive.scss */
