--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -459,10 +459,10 @@ $zen-auto-include-item-base: false;
     display: none;
   }
   .form-item-email {
-    float: right;
+    float: left;
   }
   .form-type-textfield input {
-    width: 45%;
+    width: 120px;
   }
   #edit-submit {
     background: none repeat scroll 0 0 $dark-orange;
@@ -470,7 +470,7 @@ $zen-auto-include-item-base: false;
     color: $gray;
     float: left;
     padding: 3px;
-    width: 35%;
+//    width: auto;
   }
 }
 .section-studio {
