--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -443,7 +443,8 @@ $zen-auto-include-item-base: false;
   margin-bottom: 0;
   h2 {
     color: $gray;
-    font-size: 1em;
+    font-size: 0.85em;
+    font-size: 1vw;
     line-height: 1em;
     margin-bottom: 0;
     margin-top: 0;
