--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -467,7 +467,9 @@ $zen-auto-include-item-base: false;
   #edit-submit {
     background: none repeat scroll 0 0 $dark-orange;
     border: medium none;
-    color: $gray;
+    color: $white;
+    font-size: 0.85em;
+    font-size: 1vw;
     float: left;
     padding: 3px;
 //    width: auto;
