--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -471,8 +471,8 @@ $zen-auto-include-item-base: false;
     font-size: 0.85em;
     font-size: 1vw;
     float: left;
-    padding: 3px;
-//    width: auto;
+    padding: 6px;
+    padding: 0.45vw;
   }
 }
 .section-studio {
