--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -447,7 +447,8 @@ $zen-auto-include-item-base: false;
     font-size: 1vw;
     line-height: 1em;
     margin-bottom: 0;
-    margin-top: 0;
+    margin-top: 5px;
+    margin-top: 0.45vw;
   }
   p {
     margin: 0;
