--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -96,6 +96,7 @@ $zen-auto-include-item-base: false;
   margin-bottom: 0;
 }
 #block-block-3 {
+  display: none;
   padding-left: 10px;
   margin-bottom: 0;
   margin-top: 10px;
@@ -104,6 +105,7 @@ $zen-auto-include-item-base: false;
   }
 }
 #block-campaignmonitor-454473ba9a4727caea867f18be3bb00b {
+  display: none;
   padding-left: 10px;
   margin-bottom: 0;
   h2 {
@@ -264,6 +266,7 @@ $zen-auto-include-item-base: false;
   margin-bottom: 2em;
 }
 #block-block-3 {
+  display: block;
   padding-left: 10px;
   margin-bottom: 0;
   margin-top: 10px;
@@ -272,6 +275,7 @@ $zen-auto-include-item-base: false;
   }
 }
 #block-campaignmonitor-454473ba9a4727caea867f18be3bb00b {
+  display: block;
   padding-left: 10px;
   margin-bottom: 0;
   h2 {
@@ -523,6 +527,7 @@ $zen-auto-include-item-base: false;
   margin-bottom: 2em;
 }
 #block-block-3 {
+  display: block;
   padding-left: 10px;
   margin-bottom: 0;
   margin-top: 10px;
@@ -531,6 +536,7 @@ $zen-auto-include-item-base: false;
   }
 }
 #block-campaignmonitor-454473ba9a4727caea867f18be3bb00b {
+  display: block;
   padding-left: 10px;
   margin-bottom: 0;
   h2 {
