sidebar one zen-new-row

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -633,13 +633,14 @@ $zen-auto-include-item-base: false;
   .two-sidebars {
     /* Span 3 columns, starting in 2nd column from left. */
     #content {
-      @include zen-grid-item(4, 1);
+      @include zen-grid-item(4, 2);
     }
 
     /* Span 1 column, starting in 1st column from left. */
     .region-sidebar-first {
       @include zen-grid-item(1, 1);
-    }
+      @include zen-new-row();
+  }
 
     /* Span 1 column, starting in 5th column from left. */
     .region-sidebar-second {
