--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -377,7 +377,7 @@ $zen-auto-include-item-base: false;
 
     /* Start a new row and span all 3 columns. */
     .region-sidebar-second {
-      @include zen-grid-item(3, 1);
+      @include zen-grid-item(1, 1);
       @include zen-grid-container(); // Since we're making every block in this region be a grid item.
       @include zen-new-row();
 
@@ -388,15 +388,15 @@ $zen-auto-include-item-base: false;
       /* Span 1 column, starting in the 1st column from left. */
       .block:nth-child(3n+1) {
         @include zen-grid-item(1, 1);
-        @include zen-new-row();
+        //@include zen-new-row();
       }
       /* Span 1 column, starting in the 2nd column from left. */
       .block:nth-child(3n+2) {
-        @include zen-grid-item(1, 2);
+        @include zen-grid-item(1, 1);
       }
       /* Span 1 column, starting in the 3rd column from left. */
       .block:nth-child(3n) {
-        @include zen-grid-item(1, 3);
+        @include zen-grid-item(1, 1);
       }
     }
   }
