campaign monitor phone

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -126,6 +126,7 @@ $zen-auto-include-item-base: false;
     display: none;
   }
   .form-item-email {
+    display: inline;
     float: none;
   }
   .form-type-textfield input {
