campaign monitor phone

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -106,13 +106,13 @@ $zen-auto-include-item-base: false;
 }
 #block-campaignmonitor-454473ba9a4727caea867f18be3bb00b {
   padding-left: 10px;
-  margin-bottom: 0;
+  margin-bottom: 1em;
   text-align: center;
   h2 {
     color: $gray;
     font-size: 1em;
     line-height: 1em;
-    margin-bottom: 0;
+    margin-bottom: 0.5em;
     margin-top: 5px;
     margin-top: 0.45vw;
   }
